# blueteam-autopilot

./: .env.example  .gitignore  .mcp.example.json  .mcp.json  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SECURITY.md  agent.py  blueteam.py  pubspec.yaml  pyproject.toml  requirements.txt  sample-attack-traffic.sh
.github/workflows/: chocolatey-release.yml  homebrew.yml  test-choco-secret.yml
.qoder/: settings.local.json
.qoder/plans/: Qwen_Autopilot_Agent_Package_1abe0527.md
agent/: __init__.py  __main__.py  cli.py  config.py  hitl.py  main.py  system_prompt.py  tools.py
alibaba_security_backend/: pubspec.yaml
alibaba_security_backend/lib/: alibaba_security_backend.dart
alibaba_security_backend/test/: alibaba_security_backend_test.dart
assets/: blueteam-architecture.html  sample-response.md
blueteam_autopilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blueteam_data/: fixtures  knowledge  scripts
connectonion_qwen/: __init__.py  config.py  embeddings.py  injection_patterns.json  mcp.py  memory.py  plugins.py  qwen_llm.py  report_models.py  system_prompt.py  tools.py
design/: attack.md  cli-skill-poc-summary.md  e2e-testing-guide.md  spec.md  testing.md
homebrew/: README.md
secops/: asset_inventory.md  change_management_policy.md  compliance_nist_csf_de_excerpt.md  runbook_secops_waf_mitigation.md  trusted_networks.md
skills/: AUTONOMOUS_SETUP.md  ENVIRONMENT_INDEPENDENCE.md  MODES.md
submission/: about.md  medium-article.md  proof-of-deployment.md
tests/: bugs.md
(+251 files in other folders)
