[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueteam-autopilot"
version = "3.1.8"
description = "SecOps Agent powered by Qwen Cloud + ConnectOnion for multi-cloud security operations"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "connectonion>=1.0.0",
    "mcp>=1.27,<2",
    "python-dotenv>=1.0.0",
    "libsql>=0.1.1",
    "pyyaml>=6.0",
]

[project.scripts]
blueteam = "blueteam:main"

[tool.setuptools]
py-modules = ["blueteam"]

[tool.setuptools.packages.find]
include = ["connectonion_qwen*", "workflows*"]
exclude = ["tests*", "__pycache__*"]

[tool.setuptools.package-data]
"connectonion_qwen" = ["injection_patterns.json"]
